# GabrielleAI

./: .env.example  .gitignore  pyproject.toml
.github/: copilot-instructions.md
source/: pyvenv.cfg
src/gabrielle/: config.py  main.py
src/gabrielle/graph/: state.py
src/gabrielle/graph/nodes/: planner.py  researcher.py  writer.py
src/gabrielle/models/: request.py  response.py
src/gabrielle/services/: llm.py
src/gabrielle/services/search/: base.py  tavily.py
