[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gabrielle"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-dotenv",
    "langgraph>=0.2",
    "langchain-openai>=0.1",
    "langchain-anthropic>=0.1",
    "tavily-python>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
